--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,20 +1,16 @@
 
-<div class="login-cnt">
-    <mat-card>
+<!-- <div class="login-cnt"> -->
+    <mat-card class="cnt-width">
             <mat-card-title>Login</mat-card-title>
-      <mat-card-content>
-        <form [formGroup]="form" (ngSubmit)="submit()">
-          <p>
-            <mat-form-field>
+      <mat-card-content >
+        <form style="width: 100%;"  [formGroup]="form" (ngSubmit)="submit()">
+            <mat-form-field style="width: 100%;">
               <input type="text" matInput placeholder="Username" formControlName="username">
             </mat-form-field>
-          </p>
 
-          <p>
-            <mat-form-field>
+            <mat-form-field style="width: 100%;">
               <input type="password" matInput placeholder="Password" formControlName="password">
             </mat-form-field>
-          </p>
 
           <!-- <p *ngIf="error" class="error">
             {{ error }}
@@ -27,4 +23,4 @@
         </form>
       </mat-card-content>
     </mat-card>
-</div>
+<!-- </div> -->
