--- a/src/app/component/login/login.component.scss
+++ b/src/app/component/login/login.component.scss
@@ -4,12 +4,23 @@
     margin: 100px 0px;
   }
 
-  .mat-form-field {
+  .mat-form-field-width {
     width: 100%;
-    min-width: 300px;
+    min-width: 30%;
   }
+  .cnt-width {
+    width: 40%;
+  }
+.input-cnt{
+    width: 100%;
+}
 
-  mat-card-title,
+  mat-card-title {
+    display: flex;
+    justify-content: center;
+    margin: 1em;
+    font-size: 30px;
+  }
   mat-card-content {
     display: flex;
     justify-content: center;
@@ -24,5 +35,9 @@
 
   .button {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
+    width: 100%;
+    // border: 1px solid black;
+    border-radius: 5px;
+    background: rgb(129, 188, 244);
   }
