ADDED: getting login credential using json server

--- a/src/app/component/login/login.component.scss
+++ b/src/app/component/login/login.component.scss
@@ -33,7 +33,7 @@
     background-color: red;
   }
 
-  .button {
+  .button button {
     display: flex;
     justify-content: center;
     width: 100%;
