ADDED: product card to the dashboard from json server

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -4,7 +4,7 @@
     <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
       <mat-icon>menu</mat-icon>
     </button>
-    <span>My App</span>
+    <span>Product Web Portal</span>
     <span class="example-spacer"></span>
 
     <div class="example-spacer search-bar">
