--- a/src/app/component/dashboard/dashboard.component.html
+++ b/src/app/component/dashboard/dashboard.component.html
@@ -1,2 +1,40 @@
-<p>dashboard works!</p>
 <app-header></app-header>
+
+<div class="main-cnt">
+
+    <div class="filter-cnt">
+        <mat-icon>filter_list</mat-icon>
+        <mat-button-toggle-group multiple >
+            <mat-button-toggle value="Price">Price</mat-button-toggle>
+            <mat-button-toggle value="Rating">Rating</mat-button-toggle>
+            <mat-button-toggle value="Delivery Days">Delivery Days</mat-button-toggle>
+        </mat-button-toggle-group>   
+    </div>
+
+    <div class="product-cnt"  >
+        <mat-card class="product-card" appearence="outlined" *ngFor="let item of productList">
+            <mat-card-header>
+                <mat-card-title class="product-title">{{ item.name }} </mat-card-title>
+            </mat-card-header>
+            <img mat-card-image src="">
+            <mat-card-content>
+                <mat-card-subtitle class="product-dtl">{{ item.description }}</mat-card-subtitle>
+                <mat-card-subtitle class="product-dtl">Rating: <span>{{ item.rating }}</span></mat-card-subtitle>
+                <mat-card-subtitle class="product-dtl">Price: <span>{{ item.price }}</span></mat-card-subtitle>
+                <mat-card-subtitle class="product-dtl">Delivery Days: <span>{{ item.delivery_days }}</span></mat-card-subtitle>
+
+                <div class="review-cnt">
+                    <p>Review:</p>
+                    
+                    <mat-card-subtitle class="product-dtl" *ngFor="let review of item.reviews">
+                        <mat-card-subtitle>{{ review }}</mat-card-subtitle>
+                    </mat-card-subtitle>
+                </div>
+
+                
+              </mat-card-content>
+        </mat-card>
+    </div>
+
+
+</div>
