--- a/src/app/component/dashboard/dashboard.component.html
+++ b/src/app/component/dashboard/dashboard.component.html
@@ -15,24 +15,18 @@
         <mat-card class="product-card" appearence="outlined" *ngFor="let item of productList">
             <mat-card-header>
                 <mat-card-title class="product-title">{{ item.name }} </mat-card-title>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+                <mat-icon >favorite_outline</mat-icon>
             </mat-card-header>
-            <img mat-card-image src="">
-            <mat-card-content>
-                <mat-card-subtitle class="product-dtl">{{ item.description }}</mat-card-subtitle>
-                <mat-card-subtitle class="product-dtl">Rating: <span>{{ item.rating }}</span></mat-card-subtitle>
-                <mat-card-subtitle class="product-dtl">Price: <span>{{ item.price }}</span></mat-card-subtitle>
-                <mat-card-subtitle class="product-dtl">Delivery Days: <span>{{ item.delivery_days }}</span></mat-card-subtitle>
-
-                <div class="review-cnt">
-                    <p>Review:</p>
-                    
-                    <mat-card-subtitle class="product-dtl" *ngFor="let review of item.reviews">
-                        <mat-card-subtitle>{{ review }}</mat-card-subtitle>
-                    </mat-card-subtitle>
-                </div>
-
-                
-              </mat-card-content>
+            <img mat-card-image src="{{ item.img_url }}">
+            <div class="details">
+                <mat-card-content>
+                    <mat-card-subtitle class="product-dtl">Price: <span>{{ item.price | currency: 'INR' }}</span></mat-card-subtitle>
+                    <mat-card-subtitle class="product-dtl">Rating: <span>{{ item.rating }}</span></mat-card-subtitle>
+                    <mat-card-subtitle class="product-dtl">{{ item.description }}</mat-card-subtitle>
+                    <mat-card-subtitle class="product-dtl">Delivery Days: <span>{{ item.delivery_days }}</span></mat-card-subtitle>
+                </mat-card-content>
+            </div>
         </mat-card>
     </div>
 
