--- a/src/app/component/dashboard/dashboard.component.html
+++ b/src/app/component/dashboard/dashboard.component.html
@@ -49,12 +49,11 @@
     <div class="product-cnt">
         <mat-card class="product-card" appearence="outlined" *ngFor="let item of productList | search : searchQuery | filter : selectedPrice : selectedRating : selectedDelivery">
             <mat-card-header>
-                <mat-card-title class="product-title">{{ item.name }} </mat-card-title>
-
-                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                </p>
-
-                <mat-icon>favorite_outline</mat-icon>
+                <div class="card-header">
+                    
+                    <mat-card-title class="product-title">{{ item.name }} </mat-card-title>    
+                    <mat-icon>favorite_outline</mat-icon>
+                </div>
             </mat-card-header>
             <img mat-card-image src="{{ item.img_url }}">
             <div class="details">
