--- a/src/app/component/dashboard/dashboard.component.scss
+++ b/src/app/component/dashboard/dashboard.component.scss
@@ -37,10 +37,17 @@
     margin: 1em;
     padding: 1em;
 }
+.card-header {
+    display: inline-flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
 .product-card img {
     background-size: cover;
-    height: 200px;
-    width: 290px;
+    max-height: 200px;
+    max-width: 290px;
 
 }
 
