--- a/src/app/component/product/product/product.component.html
+++ b/src/app/component/product/product/product.component.html
@@ -1,27 +1,14 @@
-<div class="product-cnt">
-    <mat-card class="product-card" appearence="outlined" >
-        <mat-card-header>
-            <div class="card-header">
-                
-                <mat-card-title class="product-title">{{ item.name }} </mat-card-title>    
-                <mat-icon>favorite_outline</mat-icon>
-            </div>
-        </mat-card-header>
-        <img mat-card-image src="{{ item.img_url }}">
-        <div class="details">
-            <mat-card-content>
-                <mat-card-subtitle class="product-dtl">Price: <span>{{ item.price | currency: 'INR'
-                        }}</span></mat-card-subtitle>
-                <mat-card-subtitle class="product-dtl">Rating: <span>{{ item.rating }}</span></mat-card-subtitle>
-                <mat-card-subtitle class="product-dtl">{{ item.description }}</mat-card-subtitle>
-                <mat-card-subtitle class="product-dtl">
-                    <p *ngIf="item.delivery_days!==1">Delivery within {{ item.delivery_days }} days</p>
-                    <p *ngIf="item.delivery_days==1">Delivery today..</p>
-                    </mat-card-subtitle>
-            </mat-card-content>
-        </div>
-    </mat-card>
-</div>
-
-
+<div class="main-cnt">
+    <h1 mat-dialog-title>{{ data.name }}</h1>
+    <div mat-dialog-content>
+        <img [src]="data.img_url" alt="{{ data.name }}">
+        <p>Price: {{ data.price | currency: 'INR' }}</p>
+        <p>Rating: {{ data.rating }}</p>
+        <p>{{ data.description }}</p>
+        <p *ngIf="data.delivery_days !== 1">Delivery within {{ data.delivery_days }} days</p>
+        <p *ngIf="data.delivery_days === 1">Delivery today..</p>
+    </div>
+    <div mat-dialog-actions>
+        <button mat-button (click)="onClose()">Close</button>
+    </div>
 </div>
